fixing color contrast of disabled primary buttons FIT-2187

--- a/themes/expressadmin/scss/btn.scss
+++ b/themes/expressadmin/scss/btn.scss
@@ -126,8 +126,9 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #428bca;
-  border-color: #357ebd;
+  background-color: #fff;
+  border-color: #ccc;
+  color:#666;
 }
 .btn-primary .badge {
   color: #428bca;
